--- a/links/main.css
+++ b/links/main.css
@@ -66,6 +66,14 @@ small { font-size: 80%; }
 #logbook #datepicker form select { color: var(--b_high); background-color: var(--background); width: 100%; box-sizing: border-box;  border-radius: 0; -moz-appearance: none; -webkit-appearance: none; appearance: none; }
 #logbook #datepicker form select:hover { background-color: var(--b_low); }
 
+#logbook #timeline #ruler { width: 100%; height:16px; margin-bottom:4px; display: flex; align-items: center; border-bottom: 2px solid var(--b_low); }
+#logbook #timeline .hour { height: 100%; position: relative; display: flex; padding-left:2px; color: var(--b_low); border-left: 2px solid var(--b_low); }
+#logbook #timeline .hour:last-child { border-right: 2px solid var(--b_low); }
+#logbook #timeline #label { position: absolute; top:0; left:2px; color: var(--b_med); }
+#logbook #timeline #items { width: 100%; height:16px; margin-bottom:2px; display: flex; justify-content: flex-start; background-color:var(--b_low); border-radius: var(--rounded); }
+#logbook #timeline .item { height: 100%; margin-right: 2px;  border-radius: var(--rounded); }
+#logbook #timeline .item:last-child { margin: 0; }
+
 .empty { fill: var(--b_low); stroke: var(--b_low); color: var(--b_low); }
 .stroke { stroke-width: 2px; stroke-linecap: round; stroke-linejoin: round; fill: none; }
 .lc { text-transform: lowercase; }
