--- a/links/main.css
+++ b/links/main.css
@@ -68,6 +68,7 @@ small { font-size: 80%; }
 #logbook #datepicker form { font-size: 16px; font-weight: bold; font-family:inherit; }
 #logbook #datepicker form select { color: var(--b_high); background-color: var(--background); width: 100%; box-sizing: border-box;  border-radius: 0; -moz-appearance: none; -webkit-appearance: none; appearance: none; }
 #logbook #datepicker form select:hover { background-color: var(--b_low); }
+#logbook #datepicker form select option { font-family: monospace; font-weight: normal; }
 
 #logbook #timeline #ruler { width: 100%; height:16px; margin-bottom:4px; display: flex; align-items: center; border-bottom: 2px solid var(--b_low); }
 #logbook #timeline .hour { height: 100%; position: relative; display: flex; padding-left:2px; color: var(--b_low); border-left: 2px solid var(--b_low); }
